--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ Gemfile.lock
 InstalledFiles
 _yardoc
 coverage
-doc/
+doc/*/
 lib/bundler/man
 pkg
 rdoc
@@ -20,3 +20,6 @@ tmp
 *.o
 *.a
 mkmf.log
+.console_history
+*.swp
+coverage
